Fix z-index and wind/co2/solar colorbar rendering bug

--- a/web/public/css/styles.css
+++ b/web/public/css/styles.css
@@ -73,7 +73,6 @@ hr {
     height: 100%;
     position: absolute;
     top: 0px;
-    z-index: 99;
 }
 .loading {
     opacity: 0.7;
@@ -132,7 +131,6 @@ hr {
     border-top: none;
     border-left: none;
     border-bottom: none;
-    z-index: 1; /* to stay above map */
 }
 .left-panel h1 {
     line-height: 1.3;
